--- a/processors/fmri-GF-oddball2_v1.1.0.yaml
+++ b/processors/fmri-GF-oddball2_v1.1.0.yaml
@@ -24,7 +24,7 @@ inputs:
         types: oddball2*
         resources:
           - {resource: EPRIME_TXT, fmatch: '*.txt', fdest: eprime.txt}
-        needs_qc: True
+        skip_unusable: True
 
     assessors:
       - name: assr_fmriprep
