--- a/processors/fmri-GF-SPT1_v1.4.0.yaml
+++ b/processors/fmri-GF-SPT1_v1.4.0.yaml
@@ -22,7 +22,9 @@ inputs:
     scans:
       - name: scan_fmri
         types: spt1*
-        skip_unusable: True
+        resources:
+          - {resource: EPRIME_TXT, fmatch: '*.txt', fdest: eprime.txt}
+         skip_unusable: True
 
     assessors:
       - name: assr_fmriprep
@@ -48,6 +50,7 @@ command:
     mv feat-task-fmri-* feat-task-fmri &&
     export PATH=/OUTPUTS/feat-task-fmri/src:\$PATH &&
     pipeline-GF-SPT-run-firstlevel.sh
+      --eprime_txt /INPUTS/eprime.txt
       --fmriprep_dir /INPUTS/fmriprepBIDS/fmriprepBIDS
       --out_dir /OUTPUTS
     '
